--- a/about-me.html
+++ b/about-me.html
@@ -8,30 +8,32 @@
 </head>
 <body>
     <header>
+        <h1>Zara's gallery</h1>
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About me </a></li>
-                <li><a href="my-artsupplies.html"> My Art Supplies</a></li>
-                <li><a href="custom-made.html"> Custom Art</a></li>
+                <li><a href="about-me.html"> About Me </a></li>
+                <li><a href="drawings.html"> Drawings </a></li>
+                <li><a href="paintings.html"> Paintings and Make-up </a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Zara's gallery</h1>
-
-        <h2> About me </h2>
-        <p> Hi! My name is Zara Jones and I am a seventeen year old artist.</p>
-
+        <section> 
+            <h2> About me </h2>
+            <p> Hi! My name is Zara Jones and I am a seventeen year old artist. Since I was a kid I loved painting and making art. </p>    
+        </section>
     </main>
 
     <footer>
-        <p>
-            Zara Jones
-            Klas P09 Roze
-            500930396
-        </p>
+        <ul>
+            <li>
+                Zara Jones
+                Klas P09 Roze
+                500930396
+            </li>
+        </ul>
     </footer>
 
 
