--- a/index.html
+++ b/index.html
@@ -8,74 +8,58 @@
 </head>
 <body>
     <header>
+        <h1>Zara's gallery</h1>
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About me </a></li>
-                <li><a href="my-artsupplies.html"> My Art Supplies</a></li>
-                <li><a href="custom-made.html"> Custom Art</a></li>
+                <li><a href="about-me.html"> About Me </a></li>
+                <li><a href="drawings.html"> Drawings </a></li>
+                <li><a href="paintings.html"> Paintings and Make-up </a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Zara's gallery</h1>
+        <section> 
+            <h2>Drawings</h2>
+            <div class="img"> 
+                <img src="images/IMG_2348.jpeg" alt="moon drawing" width="455">
+                <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="455">
+                <img src="images/IMG_7655.jpeg" alt="mushroom marlboro drawing" width="455">
+            </div>
+
+            <p>
+                The thing I enjoy most at the moment is making drawings with markers and fineliners. 
+                With these art supplies I can quickly make a drawing in my sketchbook. I can also easily take them anywhere, not like with paint.
+                Click on the button below for more drawings and information.
+            </p>
+        </section>
 
         <section> 
             <h2>Paintings</h2>
-            <p>One of the things I've been doing since I was a little kid is painting. I remember sitting at the table with a large sheet of paper and some paint in front of me. 
+            <div class="img"> 
+                <img src="images/IMG_5699.jpeg" alt="guitar painting" width="665">
+                <img src="images/IMG_8580.JPG" alt="graffiti wall" width="500">
+            </div>
+
+            <p> One of the things I've been doing since I was a little kid is painting. I remember sitting at the table with a large sheet of paper and some paint in front of me. 
                 I immediately started painting and had a blast. When I was done and the paint dried, I was always really proud of myself.
                 I still enjoy painting, but I do it less these days. I can really sit in my room for hours and work on a painting. 
                 Sometimes I don't even realize that I have been working for almost 4 hours. I just really wanted to finish my painting and see the end result.
                 Below you can see some paintings I made.
             </p>
 
-            <img src="Images/IMG_3197.JPG" alt="olaf painting" width="200" height="10%">
-            <img src="Images/IMG_5699.jpeg" alt="guitar painting"width="10%" height="10%">
-            <img src="Images/IMG_4567.jpeg"alt="flower plainting"  width="200" height="10%">
-            <img src="Images/IMG_8580.JPG" alt="grafiti wall" width="10%" height="10%">
         </section>
-
-        <section> 
-            <h2>Marker and fineliner art</h2>
-            <p>My main focus right now is marker and fineliner art. I really enjoy making this type of art because it is easy and quick to make. 
-                I can quickly make a sketch or drawing in my drawing book with some markers and fineliners, which ultimately looks good.
-                You can really see my art style coming through, because I like to draw plants or other objects with faces. I mainly use bright colors for these types of drawings, 
-                but occasionally I only use a black fineliner. I mainly get my inspiration from Pinterest, but also other things in my environment.
-                Below you can see some drawings I made.
-            </p>
-
-            <img src="Images/IMG_2348.jpeg" alt="moon drawing" width="200" height="10%">
-            <img src="Images/IMG_4785.JPG" alt="black fineliner drawing" width="10%" height="10%">
-            <img src="Images/IMG_7656.jpeg" alt="monster flower drawing" width="200" height="10%">
-            <img src="Images/IMG_7986.jpeg" alt="marker face drawing" width="200" height="10%">
-            <img src="Images/0D530537-C493-4666-B848-3F1E3AE02226.jpg" alt="angry flower drawing" width="200" height="200">
-            <img src="Images/IMG_7657.jpeg" alt="eye flower drawing" width="200" height="10%">
-            <img src="Images/IMG_7658.jpeg" alt="flower face drawing" width="200" height="10%">
-            <img src="Images/IMG_8579.jpeg" alt="spider drawing" width="200" height="10%">
-        </section>
-        <section>
-            <h2>Make-up</h2>
-            <p> I consider make-up to be a form of art. It's a bit like painting, but instead of paint you use eyeshadow or lipstick. I really
-                enjoy doing my make-up and it can be quite relaxing for me, which is why it's also one of my hobbies. People always ask me why it
-                takes me so long to do my make-up looks and if I get bored while doing it, but they don't realize that I really enjoy doing it and 
-                don't really realize how long it is taking. Of couse, how long it takes differs in terms of which make-up looks I'm doing, but it doesn't
-                matter to me. I never get tired of it or find it boring.
-                Below you can see some make-up looks I created. 
-            </p>
-
-            <img src="Images/IMG_3180.JPG" alt="skull make-up" width="10%" height="10%">
-            <img src="Images/IMG_8423.jpeg" alt="alien make-up" width="25%" height="10%">
-            <img src="Images/IMG_7785.jpeg" alt="star Make-up" width="20%" height="10%">
-        </section> 
-     </main>
+    </main>
      
-     <footer>
-        <p>
-            Zara Jones
-            Klas P09 Roze
-            500930396
-        </p>
+    <footer>
+        <ul>
+            <li>
+                Zara Jones
+                Klas P09 Roze
+                500930396
+            </li>
+        </ul>
      </footer>
     
 </body>
