--- a/drawings.html
+++ b/drawings.html
@@ -29,15 +29,21 @@
                 but occasionally I only use a black fineliner. I mainly get my inspiration from Pinterest, but also other things in my environment.
                 Below you can see some drawings I made.
             </p>
-    
-            <img src="images/IMG_2348.jpeg" alt="moon drawing" width="460">
-            <img src="images/IMG_4785.JPG" alt="black fineliner drawing" width="450">
-            <img src="images/IMG_7986.jpeg" alt="marker face drawing" width="460">
-            <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="460">
-            <img src="images/IMG_7657.jpeg" alt="eye flower drawing" width="460">
-            <img src="images/IMG_7658.jpeg" alt="flower face drawing" width="460">
-            <img src="images/IMG_8579.jpeg" alt="spider drawing" width="600">
-            <img src="images/0D530537-C493-4666-B848-3F1E3AE02226.jpg" alt="angry flower drawing" width="450">
+
+            <div class="img">
+                <img src="images/IMG_2348.jpeg" alt="moon drawing" width="460">
+                <img src="images/IMG_4785.JPG" alt="black fineliner drawing" width="450">
+                <img src="images/IMG_7986.jpeg" alt="marker face drawing" width="460">
+            </div>
+            <div class="img">
+                <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="460">
+                <img src="images/IMG_7657.jpeg" alt="eye flower drawing" width="460">
+                <img src="images/IMG_7658.jpeg" alt="flower face drawing" width="460">
+            </div>
+            <div class="img">
+                <img src="images/IMG_8579.jpeg" alt="spider drawing" width="700">
+                <img src="images/0D530537-C493-4666-B848-3F1E3AE02226.jpg" alt="angry flower drawing" width="525">
+            </div>
         </section>
     </main>
 
