--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <p>
                 The thing I enjoy most at the moment is making drawings with markers and fineliners. 
                 With these art supplies I can quickly make a drawing in my sketchbook. I can also easily take them anywhere, not like with paint.
-                Click on the button below for more drawings and information.
+                Click below for more of my drawings!
             </p>
+            <a href="drawings.html"> Drawings </a>
         </section>
 
         <section> 
@@ -42,13 +43,11 @@
                 <img src="images/IMG_8580.JPG" alt="graffiti wall" width="500">
             </div>
 
-            <p> One of the things I've been doing since I was a little kid is painting. I remember sitting at the table with a large sheet of paper and some paint in front of me. 
-                I immediately started painting and had a blast. When I was done and the paint dried, I was always really proud of myself.
-                I still enjoy painting, but I do it less these days. I can really sit in my room for hours and work on a painting. 
-                Sometimes I don't even realize that I have been working for almost 4 hours. I just really wanted to finish my painting and see the end result.
-                Below you can see some paintings I made.
+            <p> I have been painting since I can remember. My parents have kept all my paintings from the past and I still enjoy looking at them. Of course I've gotten better, so I like seeing the progress. 
+                I've been doing it less lately, because it takes a lot of time.
+                Click below for more of my paintings!               
             </p>
-
+            <a href="paintings.html"> Paintings and Make-up </a>
         </section>
     </main>
      
