--- a/paintings.html
+++ b/paintings.html
@@ -28,15 +28,22 @@
                 Sometimes I don't even realize that I have been working for almost 4 hours. I just really wanted to finish my painting and see the end result.
                 Below you can see some paintings I made.
             </p>
-            
-            <img src="images/IMG_3197.JPG" alt="olaf painting" width="600">
-            <img src="images/IMG_4567.jpeg" alt="flower plainting" width="600">
-            <img src="images/IMG_5681.jpeg" alt="guitar painting 3" width="400">
-            <img src="images/IMG_5662.jpeg" alt="guitar painting 2" width="400">
-            <img src="images/IMG_5699.jpeg" alt="guitar painting 1" width="400">
-            <img src="images/IMG_8462.jpeg" alt="flower field painting" width="550">
-            <img src="images/IMG_4621.jpeg" alt="baby yoda painting" width="420">
-            <img src="images/IMG_5481.jpeg" alt="aladdin painting" width="420">
+
+            <div class="img">
+                <img src="images/IMG_3197.JPG" alt="olaf painting" width="600">
+                <img src="images/IMG_4567.jpeg" alt="flower plainting" width="600">
+            </div>
+            <div class="img">
+                <img src="images/IMG_5681.jpeg" alt="guitar painting 3" width="400">
+                <img src="images/IMG_5662.jpeg" alt="guitar painting 2" width="400">
+                <img src="images/IMG_5699.jpeg" alt="guitar painting 1" width="400">
+            </div>
+            <div class="img">
+                <img src="images/IMG_8462.jpeg" alt="flower field painting" width="550">
+                <img src="images/IMG_4621.jpeg" alt="baby yoda painting" width="420">
+                <img src="images/IMG_5481.jpeg" alt="aladdin painting" width="420">
+            </div>
+
 
             <h3>Art supplies I use for making my paintings</h3>
             <p>
@@ -47,10 +54,15 @@
                 I sometimes also use watercolor. I then use the paint from the Van Gogh brand. This paint is very pigmented and nice to work with.
 
             </p>
-            <img src="images/IMG_8580.JPG" alt="grafiti wall" width="300">
-            <img src="images/IMG_7545.jpeg" alt="fairy painting 1" width="400">
-            <img src="images/IMG_7741.jpeg" alt="fairy painting 2" width="400">
-            <img src="images/10EDC1D5-D0A4-48D2-99FE-694BA646784E.jpg" alt="star wars water painting" width="500">
+            <div class="img">
+                <img src="images/IMG_8580.JPG" alt="grafiti wall" width="300">
+                <img src="images/IMG_7545.jpeg" alt="fairy painting 1" width="400">
+                <img src="images/IMG_7741.jpeg" alt="fairy painting 2" width="400">
+            </div>
+            <div class="img">
+                <img src="images/10EDC1D5-D0A4-48D2-99FE-694BA646784E.jpg" alt="star wars water painting" width="700">
+            </div>
+
 
 
 
@@ -66,9 +78,11 @@
                 Below you can see some make-up looks I created. 
             </p>
 
-            <img src="images/IMG_3180.JPG" alt="skull make-up" width="350">
-            <img src="images/IMG_7785.jpeg" alt="star Make-up" width="410">
-            <img src="images/IMG_8423.jpeg" alt="alien make-up" width="590">
+            <div class="img">
+                <img src="images/IMG_3180.JPG" alt="skull make-up" width="350">
+                <img src="images/IMG_7785.jpeg" alt="star Make-up" width="410">
+                <img src="images/IMG_8423.jpeg" alt="alien make-up" width="590">
+            </div>
         </section>
 
 
