--- a/about-me.html
+++ b/about-me.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About Me </a></li>
                 <li><a href="drawings.html"> Drawings </a></li>
-                <li><a href="paintings.html"> Paintings and Make-up </a></li>
+                <li><a href="paintings.html"> Paintings & Make-up </a></li>
+                <li><a href="about-me.html"> About Me </a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +22,21 @@
     <main>
         <section> 
             <h2> About me </h2>
-            <p> Hi! My name is Zara Jones and I am a seventeen year old artist. Since I was a kid I loved painting and making art. </p>    
+            <div class="img">
+                <img src= "images/DBC7CFC3-8ED1-486A-9486-6082548D22E8.jpg" alt="zara picture 1" width="400">
+                <img src= "images/IMG_8657.JPG" alt="zara picture 2" width="300">
+                <img src= "images/IMG_8565.JPG" alt="zara picture 3" width="605">
+            </div>
+
+            <p> Hi! My name is Zara and I am 17 years old. In my spare time I love to make art. I created this website because I want to share my art with other people. 
+                My art style varies quite a bit, but the one thing I draw the most is objects or plants with faces on them. I enjoy drawing these the most because they aren’t realistic and I think they look funny. 
+                I usually use bright colors, but I sometimes also work with just black fineliner.
+                
+                When I'm drawing or painting, it's really a moment of rest for me. I’ll put on some music and I can work on a drawing or painting for hours. The same goes for when I do my makeup.
+                I also put some makeup looks I created on this website, because I think that is also a form of art. I will tell you more about this under the heading “Paintings and Make-up”.
+                
+                I hope you like this site and my work and have fun looking and reading!
+                </p>    
         </section>
     </main>
 
