--- a/drawings.html
+++ b/drawings.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About Me </a></li>
                 <li><a href="drawings.html"> Drawings </a></li>
-                <li><a href="paintings.html"> Paintings and Make-up </a></li>
+                <li><a href="paintings.html"> Paintings & Make-up </a></li>
+                <li><a href="about-me.html"> About Me </a></li>
             </ul>
         </nav>
     </header>
@@ -35,6 +35,15 @@
                 <img src="images/IMG_4785.JPG" alt="black fineliner drawing" width="450">
                 <img src="images/IMG_7986.jpeg" alt="marker face drawing" width="460">
             </div>
+
+            <h3>Art supplies I use for making my drawings</h3>
+            <p>
+                For my colored drawings I mainly use the fineliners and markers from Stabilo, because they are nice to draw with and they usually don’t bleed through. The colors are also very vibrant, which I like. 
+                I also sometimes use the promarkers from Winsor & Newton. I use these less often because they bleed through, but they are nice to work with and very pigmented.
+                If I want to make a work with only black fineliner, I use Staedtler or the Sakura Pigma Micron fineliners.
+                I enjoy working with these fineliners and markers the most.
+
+            </p>
             <div class="img">
                 <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="460">
                 <img src="images/IMG_7657.jpeg" alt="eye flower drawing" width="460">
