--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About Me </a></li>
                 <li><a href="drawings.html"> Drawings </a></li>
-                <li><a href="paintings.html"> Paintings and Make-up </a></li>
+                <li><a href="paintings.html"> Paintings & Make-up </a></li>
+                <li><a href="about-me.html"> About Me </a></li>
             </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
 
             <p>
                 The thing I enjoy most at the moment is making drawings with markers and fineliners. 
-                With these art supplies I can quickly make a drawing in my sketchbook. I can also easily take them anywhere, not like with paint.
+                With these art supplies I can quickly make a drawing in my sketchbook. I can also easily take them anywhere I want, not like with paint.
                 Click below for more of my drawings!
             </p>
             <a href="drawings.html"> Drawings </a>
@@ -43,11 +43,11 @@
                 <img src="images/IMG_8580.JPG" alt="graffiti wall" width="500">
             </div>
 
-            <p> I have been painting since I can remember. My parents have kept all my paintings from the past and I still enjoy looking at them. Of course I've gotten better, so I like seeing the progress. 
+            <p> I have been painting since I can remember. My parents have kept all my paintings from when I was younger and I still enjoy looking at them. Of course I've gotten better, so I like seeing the progress. 
                 I've been doing it less lately, because it takes a lot of time.
                 Click below for more of my paintings!               
             </p>
-            <a href="paintings.html"> Paintings and Make-up </a>
+            <a href="paintings.html"> Paintings & Make-up </a>
         </section>
     </main>
      
