--- a/paintings.html
+++ b/paintings.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
-                <li><a href="about-me.html"> About Me </a></li>
                 <li><a href="drawings.html"> Drawings </a></li>
-                <li><a href="paintings.html"> Paintings and Make-up </a></li>
+                <li><a href="paintings.html"> Paintings & Make-up </a></li>
+                <li><a href="about-me.html"> About Me </a></li>
             </ul>
         </nav>
     </header>
