nu echt laatste

--- a/about-me.html
+++ b/about-me.html
@@ -24,8 +24,8 @@
             <h2> About me </h2>
             <div class="img">
                 <img src= "images/DBC7CFC3-8ED1-486A-9486-6082548D22E8.jpg" alt="zara picture 1" width="400">
-                <img src= "images/IMG_8657.JPG" alt="zara picture 2" width="300">
-                <img src= "images/IMG_8565.JPG" alt="zara picture 3" width="605">
+                <img src= "images/IMG_8657.jpg" alt="zara picture 2" width="300">
+                <img src= "images/IMG_8565.jpg" alt="zara picture 3" width="605">
             </div>
 
             <p> Hi! My name is Zara and I am 17 years old. In my spare time I love to make art. I created this website because I want to share my art with other people. 
