--- a/drawings.html
+++ b/drawings.html
@@ -31,9 +31,9 @@
             </p>
 
             <div class="img">
-                <img src="images/IMG_2348.jpeg" alt="moon drawing" width="460">
-                <img src="images/IMG_4785.JPG" alt="black fineliner drawing" width="450">
-                <img src="images/IMG_7986.jpeg" alt="marker face drawing" width="460">
+                <img src="images/IMG_2348.jpg" alt="moon drawing" width="460">
+                <img src="images/IMG_4785.jpg" alt="black fineliner drawing" width="450">
+                <img src="images/IMG_7986.jpg" alt="marker face drawing" width="460">
             </div>
 
             <h3>Art supplies I use for making my drawings</h3>
@@ -45,13 +45,14 @@
 
             </p>
             <div class="img">
-                <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="460">
-                <img src="images/IMG_7657.jpeg" alt="eye flower drawing" width="460">
-                <img src="images/IMG_7658.jpeg" alt="flower face drawing" width="460">
+                <img src="images/IMG_7656.jpg" alt="monster flower drawing" width="460">
+                <img src="images/IMG_7657.jpg" alt="eye flower drawing" width="460">
+                <img src="images/IMG_7658.jpg" alt="flower face drawing" width="460">
             </div>
             <div class="img">
-                <img src="images/IMG_8579.jpeg" alt="spider drawing" width="700">
-                <img src="images/0D530537-C493-4666-B848-3F1E3AE02226.jpg" alt="angry flower drawing" width="525">
+                <img src="images/IMG_8579.jpg" alt="spider drawing" width="600">
+                <img src="images/0D530537-C493-4666-B848-3F1E3AE02226 (1).jpg" alt="angry flower drawing" width="450">
+                <img src="images/IMG_7655.jpg" alt="mushroom marlboro drawing" width="338">
             </div>
         </section>
     </main>
