--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <section> 
             <h2>Drawings</h2>
             <div class="img"> 
-                <img src="images/IMG_2348.jpeg" alt="moon drawing" width="455">
-                <img src="images/IMG_7656.jpeg" alt="monster flower drawing" width="455">
-                <img src="images/IMG_7655.jpeg" alt="mushroom marlboro drawing" width="455">
+                <img src="images/IMG_2348.jpg" alt="moon drawing" width="455">
+                <img src="images/IMG_7656.jpg" alt="monster flower drawing" width="455">
+                <img src="images/IMG_7655.jpg" alt="mushroom marlboro drawing" width="455">
             </div>
 
             <p>
@@ -39,7 +39,7 @@
         <section> 
             <h2>Paintings</h2>
             <div class="img"> 
-                <img src="images/IMG_5699.jpeg" alt="guitar painting" width="665">
+                <img src="images/IMG_5699.jpg" alt="guitar painting" width="665">
                 <img src="images/IMG_8580.JPG" alt="graffiti wall" width="500">
             </div>
 
