--- a/paintings.html
+++ b/paintings.html
@@ -30,18 +30,18 @@
             </p>
 
             <div class="img">
-                <img src="images/IMG_3197.JPG" alt="olaf painting" width="600">
-                <img src="images/IMG_4567.jpeg" alt="flower plainting" width="600">
+                <img src="images/IMG_3197.jpg" alt="olaf painting" width="600">
+                <img src="images/IMG_4567.jpg" alt="flower plainting" width="600">
             </div>
             <div class="img">
-                <img src="images/IMG_5681.jpeg" alt="guitar painting 3" width="400">
-                <img src="images/IMG_5662.jpeg" alt="guitar painting 2" width="400">
-                <img src="images/IMG_5699.jpeg" alt="guitar painting 1" width="400">
+                <img src="images/IMG_5681.jpg" alt="guitar painting 3" width="400">
+                <img src="images/IMG_5662.jpg" alt="guitar painting 2" width="400">
+                <img src="images/IMG_5699.jpg" alt="guitar painting 1" width="400">
             </div>
             <div class="img">
-                <img src="images/IMG_8462.jpeg" alt="flower field painting" width="550">
-                <img src="images/IMG_4621.jpeg" alt="baby yoda painting" width="420">
-                <img src="images/IMG_5481.jpeg" alt="aladdin painting" width="420">
+                <img src="images/IMG_8462.jpg" alt="flower field painting" width="550">
+                <img src="images/IMG_4621.jpg" alt="baby yoda painting" width="420">
+                <img src="images/IMG_5481.jpg" alt="aladdin painting" width="420">
             </div>
 
 
@@ -55,9 +55,9 @@
 
             </p>
             <div class="img">
-                <img src="images/IMG_8580.JPG" alt="grafiti wall" width="300">
-                <img src="images/IMG_7545.jpeg" alt="fairy painting 1" width="400">
-                <img src="images/IMG_7741.jpeg" alt="fairy painting 2" width="400">
+                <img src="images/IMG_8580.jpg" alt="grafiti wall" width="300">
+                <img src="images/IMG_7545.jpg" alt="fairy painting 1" width="400">
+                <img src="images/IMG_7741.jpg" alt="fairy painting 2" width="400">
             </div>
             <div class="img">
                 <img src="images/10EDC1D5-D0A4-48D2-99FE-694BA646784E.jpg" alt="star wars water painting" width="700">
@@ -79,9 +79,9 @@
             </p>
 
             <div class="img">
-                <img src="images/IMG_3180.JPG" alt="skull make-up" width="350">
-                <img src="images/IMG_7785.jpeg" alt="star Make-up" width="410">
-                <img src="images/IMG_8423.jpeg" alt="alien make-up" width="590">
+                <img src="images/IMG_3180.jpg" alt="skull make-up" width="350">
+                <img src="images/IMG_7785.jpg" alt="star Make-up" width="410">
+                <img src="images/IMG_8423.jpg" alt="alien make-up" width="590">
             </div>
         </section>
 
