--- a/drawings.html
+++ b/drawings.html
@@ -51,7 +51,7 @@
             </div>
             <div class="img">
                 <img src="images/IMG_8579.jpg" alt="spider drawing" width="600">
-                <img src="images/0D530537-C493-4666-B848-3F1E3AE02226 (1).jpg" alt="angry flower drawing" width="450">
+                <img src="images/0D530537-C493-4666-B848-3F1E3AE02226.jpg" alt="angry flower drawing" width="450">
                 <img src="images/IMG_7655.jpg" alt="mushroom marlboro drawing" width="338">
             </div>
         </section>
